--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -7,29 +7,55 @@ permissions:
   id-token: write
   contents: read
 
+env:
+  ECR_REPOSITORY: api-server
+
 jobs:
-  cicd:
+  # Spring Boot 애플리케이션을 빌드하여 도커허 브에 푸시하는 과정
+  ci-cd:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
+      # Java 17 세팅
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # gradlew 권한 설정
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      # Gradle 빌드 엑션을 이용해서 프로젝트 빌드
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2.6.0
         with:
           arguments: build
 
+      # AWS 로그인
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::788359277408:role/api-server-push-role
           role-session-name: sampleSessionName
           aws-region: ap-northeast-2
+
+      #ECR에 로그인
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@62f4f872db3836360b72999f4b87f1ff13310f3a
+
+      #이미지를 빌드하고 ECR에 push
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to ECS.
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
