--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -9,6 +9,11 @@ permissions:
 
 env:
   ECR_REPOSITORY: api-server
+  AWS_REGION: ap-northeast-2
+  ECS_CLUSTER: api-server-cluster
+  ECS_SERVICE: api-server-service
+  CONTAINER_NAME: api-server
+  ECS_TASK_DEFINITION: ./task-definition.json
 
 jobs:
   # Spring Boot 애플리케이션을 빌드하여 도커허 브에 푸시하는 과정
@@ -59,3 +64,21 @@ jobs:
           # be deployed to ECS.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      # Task를 수정하는 작업
+      - name: Fill in the new image ID in the Amazon ECS Task Definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@c804dfbdd57f713b6c079302a4c01db7017a36fc
+        with:
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ steps.build-image.outputs.image }}
+
+      # ECS에 태스크를 배포
+      - name: Deploy Amazon ECS Task Definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@df9643053eda01f169e64a0e60233aacca83799a
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
