--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -64,6 +64,7 @@ jobs:
           # be deployed to ECS.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       # Task를 수정하는 작업
       - name: Fill in the new image ID in the Amazon ECS Task Definition
